--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  </div>
 
  <div align='center' style = "vertical-align:middle"> 
-  <h2> <a href="https://www.dasfaa2024.org/"> DATAI 2024 </a><a href="https://www.dasfaa2024.org/">(https://www.dasfaa2024.org/)</a> </h2>
+  <h2> <a href="https://www.dasfaa2024.org/"> DATAI 2024 </a><a href="/">(https://www.dasfaa2024.org/)</a> </h2>
  </div>
  
 ## Workshop:
