--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
- <div align='center' > 
-  <h2> International Conference on Database Systems for Advanced Applications </h2>
- </div>
+<div align='center'>
+    <h2>Data-Centric AI Workshop</h2>
+    <h3>DATAI 2024</h3>
+</div>
+<div style="margin: 20px auto; width: 80%;">
+    <section>
+        <h4>Abstract:</h4>
+        <p>The 1st International Workshop on Data-Centric AI (DATAI) focuses on the symbiotic relationship between AI technology and high-quality data, exploring the latest research breakthroughs and innovative methodologies at the forefront of data-centric AI. The workshop aims to engage researchers in AI and data quality management, fostering discussions on optimal data construction techniques that propel AI technologies forward.</p>
+    </section>
+less
+Copy code
+<section>
+    <h4>Important Dates:</h4>
+    <ul>
+        <li>Paper Submission Due: April 1, 2024</li>
+        <li>Notification of Acceptance: April 15, 2024</li>
+        <li>Camera-Ready Papers Due: April 27, 2024</li>
+        <li>Workshop Date: TBA</li>
+    </ul>
+</section>
 
- <div align='center' style = "vertical-align:middle"> 
-  <h2> <a href="https://www.dasfaa2024.org/"> DATAI 2024 </a><a href="/">(_)</a> </h2>
- </div>
+<section>
+    <h4>Organizing Team:</h4>
+    <p>Chaired by renowned academics and professionals in the field, including Prof. Hongzhi Wang, Prof. Nan Tang, Dr. Lei Cao, Assoc. Prof. Chengliang Chai, and Dr. Xiaoou Ding. For more details on the organizing team, please refer to the official workshop documentation.</p>
+</section>
 
+<section>
+    <h4>Topics of Interest:</h4>
+    <ul>
+        <li>Data discovery for ML</li>
+        <li>Data cleaning & integration for ML</li>
+        <li>Labeling quality and ML performance</li>
+        <li>Data-efficient solutions for ML training</li>
+        <li>LLM-based data cleaning & integration</li>
+    </ul>
+</section>
 
-## Workshop:
-**The 1st Data-driven AI (DATAI)**
+<section>
+    <h4>Submission Guidelines:</h4>
+    <p>All submissions must adhere to the VLDB formatting guidelines and be submitted by the stated deadline. For detailed submission instructions, please visit the official workshop website.</p>
+</section>
 
-
-## Abstract:
+<section>
+    <h4>Contact Information:</h4>
+    <p>For further inquiries, please contact the chairs through the provided email addresses in the official document.</p>
+</section>
+</div>
