--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div align='center'>
-    </h1>The 1st International Workshop on Data-Centric AI (DATAI)</h1>
+    <h1>The 1st International Workshop on Data-Centric AI (DATAI)</h1>
     <h2>Data-Centric AI Workshop</h2>
     <h3>DATAI 2024</h3>
 </div>
