--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <div align='center'>
-    <h1>The 1st International Workshop on Data-Centric AI (DATAI)</h1>
-    <h2>Data-Centric AI Workshop</h2>
-    <h3>DATAI 2024</h3>
+    <section>
+        <h2>The 1st International Workshop on Data-Centric AI (DATAI)</h2>
+        <h2>Data-Centric AI Workshop</h2>
+        <h3>DATAI 2024</h3>
+    </section>
 </div>
 <div style="margin: 20px auto; width: 80%;">
     <section>
