--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div align='center'>
     <section>
-        <h2>The 1st International Workshop on Data-Centric AI (DATAI)</h2>
-        <h2>Data-Centric AI Workshop</h2>
+        <h2>The 1st International Workshop on Data-driven AI (DATAI)</h2>
+        <h2>Data-driven AI AI Workshop</h2>
         <h3>DATAI 2024</h3>
     </section>
 </div>
@@ -44,5 +44,7 @@
     <section>
         <h4>Contact Information:</h4>
         <p>For further inquiries, please contact the chairs through the provided email addresses in the official document.</p>
+        <iframe src="./DataCentricAI.pdf" width="600" height="500"></iframe>
+
     </section>
 </div>
