--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
     
     <section>
         <h4>Contact Information:</h4>
-        <p>For further inquiries, please contact the chairs through the provided email addresses in the official document.<a href="./DataCentricAI.pdf"> [View PDF]</a>></p>
-        <iframe src="./DataCentricAI.pdf" width="600" height="500"></iframe>
-
+        <p>For further inquiries, please contact the chairs through the provided email addresses in the official document.<a href="./DataCentricAI.pdf"> [View PDF]</a></p>
     </section>
 </div>
