--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div style="margin: 20px auto; width: 80%;">
     <section>
         <h4>Abstract:</h4>
-        <p>The 1st International Workshop on Data-Centric AI (DATAI) focuses on the symbiotic relationship between AI technology and high-quality data, exploring the latest research breakthroughs and innovative methodologies at the forefront of data-centric AI. The workshop aims to engage researchers in AI and data quality management, fostering discussions on optimal data construction techniques that propel AI technologies forward.</p>
+        <p>The 1st International Workshop on Data-driven AI (DATAI) focuses on the symbiotic relationship between AI technology and high-quality data, exploring the latest research breakthroughs and innovative methodologies at the forefront of Data-driven AI. The workshop aims to engage researchers in AI and data quality management, fostering discussions on optimal data construction techniques that propel AI technologies forward.</p>
     </section>
     <section>
         <h4>Important Dates:</h4>
@@ -43,6 +43,8 @@
     
     <section>
         <h4>Contact Information:</h4>
-        <p>For further inquiries, please contact the chairs through the provided email addresses in the official document.<a href="./DataCentricAI.pdf"> [View PDF]</a></p>
+        <p>For further inquiries, please contact the chairs through the provided email addresses in the official document<a href="./DataCentricAI.pdf"> [View PDF]</a>.</p>
     </section>
 </div>
+
+## test
