--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>The 1st International Workshop on Data-driven AI (DATAI) 2024</title>
+    <title>The 1st International Workshop on Data-driven AI (DATAI 2024)</title>
 </head>
 <body>
-<div align='center'>
-    <section>
-        <h2>The 1st International Workshop on Data-driven AI (DATAI)</h2>
-        <h3>DATAI 2024</h3>
-    </section>
-</div>
 <div style="margin: 20px auto; width: 80%;">
+    <div align='center'>
+        <section>
+            <h2>The 1st International Workshop on Data-driven AI (DATAI)</h2>
+            <h3>DATAI 2024</h3>
+        </section>
+    </div>
     <section>
         <h2>Abstract</h2>
         <p>
