--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             demands.
         </p>
         <p>
-            The 1st International Workshop on Data-Centric AI (DATAI) is dedicated to exploring the symbiotic
+            The 1st International Workshop on Data-driven AI (DATAI) is dedicated to exploring the symbiotic
             relationship between AI technologies and high-quality data. It aims to delve into the latest research
-            breakthroughs and present innovative techniques and methodologies at the forefront of data-centric AI. This
+            breakthroughs and present innovative techniques and methodologies at the forefront of Data-driven AI. This
             workshop will provide a comprehensive platform to discuss the construction of high-quality data specifically
             tailored for AI technologies, focusing on large-scale models. It seeks to engage researchers, developers,
             and practitioners in rigorous discussions to explore sustained advancements, design innovations, and
