--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
     </section>
     <section>
         <h2>Contact Information:</h2>
-        <p>For further inquiries, please contact the chairs through the provided email addresses in the official
-            document<a href="./DataCentricAI.pdf">[View PDF]</a>.</p>
+        <p>For further inquiries, please contact the chairs through the provided email addresses in the official document<a href="./Data-dentricAI.pdf">[View PDF]</a>.</p>
+        <ul>
+            <li>Hongzhi Wang: <a href="mailto:wangzh@hit.edu.cn">wangzh@hit.edu.cn</a></li>
+            <li>Nan Tang: <a href="mailto:nantang@hkust-gz.edu.cn">nantang@hkust-gz.edu.cn</a></li>
+        </ul>
     </section>
 </div>
 </body>
