--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li>Labeling quality and ML performance</li>
             <li>Data-efficient solutions for ML training</li>
             <li>LLM-based data cleaning & integration</li>
+            <li>Multi-modal data lakes (retrieval-)augmented large langauge models</li>
         </ul>
         <p>
             By fostering a collaborative environment, DATAI aims to inspire a diverse audience of participants from the
@@ -64,8 +65,7 @@
             Hongzhi Wang, Professor and PhD supervisor at Harbin Institute of Technology. Secretary General of ACM
             SIGMOD China and an outstanding member of CCF. Research focuses include big data management, analysis, and
             data quality.<br>
-            Nan Tang, Associate Professor at the University of Science and Technology, Guangzhou. Notable for his senior
-            scientist role at Qatar Computing Research Institute and research fellow at University of Edinburgh.</p>
+            Nan Tang, Associate Professor at the University of Science and Technology, Guangzhou. </p>
 
         <p><strong>PC Chairs:</strong><br>
             Lei Cao, Assistant Professor at University of Arizona and MIT CSAIL. Research interests in data systems and
