--- a/index.html
+++ b/index.html
@@ -88,28 +88,28 @@
             adherence to these standards before forwarding them to the VLDB workshop proceedings chairs for publication.
         </p>
     </section>
-    <section id="program-committee">
-        <h2>Program Committee</h2>
-        <p>The workshop's program committee comprises a distinguished group of experts in data management, analytics,
-            data science, and machine learning, tasked with reviewing submissions and ensuring high-quality research
-            presentations. Notable members include:</p>
-        <ul>
-            <li><strong>Dong Deng</strong> - Rutgers University</li>
-            <li><strong>Raul Fernandez</strong> - University of Chicago, USA</li>
-            <li><strong>El Kindi Rezig</strong> - University of Utah, USA</li>
-            <li><strong>Ju Fan</strong> - Remin University</li>
-            <li><strong>Jia Zou</strong> - ASU, USA</li>
-            <li><strong>Jiannan Wang</strong> - Simon Fraser University</li>
-            <li><strong>Meihui Zhang</strong> - Beijing Institute of Technology</li>
-            <li><strong>Paolo Papotti</strong> - Eurocom, France</li>
-            <li><strong>Mourad Ouzzani</strong> - QCRI, Qatar</li>
-            <li><strong>Shaoxu Song</strong> - Tsinghua University</li>
-            <li><strong>Xu Chu</strong> - Georgia Institute of Technology, USA</li>
-            <li><strong>Ziawasch Abedjan</strong> - Leibniz Universität Hannover, Germany</li>
-            <li><strong>Oscar Moll</strong> - MIT, USA</li>
-            <li><strong>Peter Chen</strong> - MIT, USA</li>
-        </ul>
-    </section>
+<!--    <section id="program-committee">-->
+<!--        <h2>Program Committee</h2>-->
+<!--        <p>The workshop's program committee comprises a distinguished group of experts in data management, analytics,-->
+<!--            data science, and machine learning, tasked with reviewing submissions and ensuring high-quality research-->
+<!--            presentations. Notable members include:</p>-->
+<!--        <ul>-->
+<!--            <li><strong>Dong Deng</strong> - Rutgers University</li>-->
+<!--            <li><strong>Raul Fernandez</strong> - University of Chicago, USA</li>-->
+<!--            <li><strong>El Kindi Rezig</strong> - University of Utah, USA</li>-->
+<!--            <li><strong>Ju Fan</strong> - Remin University</li>-->
+<!--            <li><strong>Jia Zou</strong> - ASU, USA</li>-->
+<!--            <li><strong>Jiannan Wang</strong> - Simon Fraser University</li>-->
+<!--            <li><strong>Meihui Zhang</strong> - Beijing Institute of Technology</li>-->
+<!--            <li><strong>Paolo Papotti</strong> - Eurocom, France</li>-->
+<!--            <li><strong>Mourad Ouzzani</strong> - QCRI, Qatar</li>-->
+<!--            <li><strong>Shaoxu Song</strong> - Tsinghua University</li>-->
+<!--            <li><strong>Xu Chu</strong> - Georgia Institute of Technology, USA</li>-->
+<!--            <li><strong>Ziawasch Abedjan</strong> - Leibniz Universität Hannover, Germany</li>-->
+<!--            <li><strong>Oscar Moll</strong> - MIT, USA</li>-->
+<!--            <li><strong>Peter Chen</strong> - MIT, USA</li>-->
+<!--        </ul>-->
+<!--    </section>-->
     <section>
         <h2>Contact Information:</h2>
         <p>For further inquiries, please contact the chairs through the provided email addresses in the official document<a href="./Data-dentricAI.pdf">[View PDF]</a>.</p>
