--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     <section>
         <h2>Organizing Team</h2>
         <p><strong>General Chairs:</strong><br>
-            Hongzhi Wang, Professor and PhD supervisor at Harbin Institute of Technology. Secretary General of ACM
+            <strong>Hongzhi Wang</strong>, Professor and PhD supervisor at Harbin Institute of Technology. Secretary General of ACM
             SIGMOD China and an outstanding member of CCF. Research focuses include big data management, analysis, and
             data quality.<br>
-            Nan Tang, Associate Professor at the University of Science and Technology, Guangzhou. </p>
+            <strong>Nan Tang</strong>, Associate Professor at The Hong Kong University of Science and Technology (Guangzhou).</p>
 
         <p><strong>PC Chairs:</strong><br>
-            Lei Cao, Assistant Professor at University of Arizona and MIT CSAIL. Research interests in data systems and
+             <strong>Lei Cao</strong>, Assistant Professor at University of Arizona and MIT CSAIL. Research interests in data systems and
             science.<br>
-            Chengliang Chai, Associate Professor in Computer Science and Technology at Beijing Institute of Technology.
+             <strong>Chengliang Chai</strong>, Associate Professor in Computer Science and Technology at Beijing Institute of Technology.
             Focuses on leveraging data management techniques for AI.<br>
-            Xiaoou Ding, Assistant Professor in Computer Science and Technology, Harbin Institute of Technology.
+             <strong>Xiaoou Ding</strong>, Assistant Professor in Computer Science and Technology, Harbin Institute of Technology.
             Specializes in data cleaning, integration, and temporal data quality management.</p>
     </section>
 
