--- a/index.html
+++ b/index.html
@@ -26,14 +26,23 @@
             demands.
         </p>
         <p>
-            The 1st International Workshop on Data-driven AI (DATAI) is dedicated to exploring the symbiotic
-            relationship between AI technologies and high-quality data. It aims to delve into the latest research
-            breakthroughs and present innovative techniques and methodologies at the forefront of Data-driven AI. This
-            workshop will provide a comprehensive platform to discuss the construction of high-quality data specifically
-            tailored for AI technologies, focusing on large-scale models. It seeks to engage researchers, developers,
-            and practitioners in rigorous discussions to explore sustained advancements, design innovations, and
-            practical applications of data construction techniques that drive AI technologies forward.
+            Beyond just leveraging quality data, AI technology itself plays a pivotal role in enhancing data quality
+            through its powerful tools for data management. From cleaning, labeling, and validation to sophisticated
+            feature engineering, AI ensures data accuracy, integrity, consistency, and reliability. This creates a
+            symbiotic relationship between AI technology and high-quality data, highlighting their mutual dependence and
+            the complementary nature of their interaction. It is this synergy that the 1st International Workshop on
+            Data-driven AI (DATAI) aims to explore, delving into the latest research breakthroughs and presenting
+            innovative techniques and methodologies at the forefront of data-driven AI.
         </p>
+        <p>
+            This workshop is dedicated to fostering a comprehensive understanding of the intricate relationship between
+            AI technologies and the data they depend on, focusing on the development of high-quality data specifically
+            tailored for AI technologies, with a particular emphasis on large-scale models. Through engaging
+            researchers, developers, and practitioners in rigorous discussions, the workshop seeks to explore sustained
+            advancements, design innovations, and practical applications of data construction techniques that propel the
+            progress of AI technologies forward.
+        </p>
+
         <h3>Topics of Interest:</h3>
         <ul>
             <li>Data discovery for ML</li>
